2019-10-02  Frederik Seiffert <frederik@algoriddim.com>

	* Source/NSDictionary.m: fixed mutable dictionary keyed subscript
	behavior: assigning nil value via keyed subscript now correctly
	removes object for key.

2019-09-25  Frederik Seiffert <frederik@algoriddim.com>

	* Headers/Foundation/NSProcessInfo.h:
	* Source/NSPathUtilities.m:
	* Source/NSProcessInfo.m:
	Added support for data directory on Android. This makes GNUstep use
	the path returned by Context.getFilesDir() as the basis for storing
	data (e.g. NSUserDefaults) and when querying system directory paths
	(NSLibraryDirectory, NSApplicationSupportDirectory, etc.). Requires
	calling a new GSInitializeProcessAndroid() initialization function.

2019-09-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: [-removeObjectsInArray:] add checks to prevent
	possible crashes, particulary if the method argument is the receiver;
	crash seen by Wolfgang.
	* Source/GSSocketStream.m: Fix incorrect key when setting old security
	level.  Change internal API name to avoid confusion.

2019-09-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTLS.m: Re-order code to avoid setting session priority
	twice.
	* Source/NSFileHandle.m: Fux so that setting certificate information
	does not discard any other options already set.

2019-09-16  Alan Jenkins <alan.christopher.jenkins@gmail.com>

	* Tools/gdomap.c:
	A couple of is_local_net() tests were wrong: they used "&&"
	with masks, but that is the logical shortcut operator.
	The correct bitwise operator is "&".  The result was that
	is_local_net() was always returning true!
	Only allow local processes to send GDO_SERVERS requests.
 	This request is only useful locally.  Do not allow remote
	requests for the server list.  Our response can be large,
	so it would make a great UDP amplification attack.

2019-08-12  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSSocketStream.m: Fix for hang when writing large https
	requests.